# learn-rust

./: .gitignore  Cargo.toml  README.md  hello  hello.rs
.github/: FUNDING.yml
.github/workflows/: rust.yml
blinky/: .gdbinit  Cargo.toml  dev.md
blinky/.cargo/: config
blinky/src/: main.rs
cloudflare-worker-wasm/: package.json  pnpm-lock.yaml
control/: Cargo.toml
control/src/: main.rs
debug/: Cargo.toml
debug/src/: main.rs
display/: Cargo.toml
display/src/: main.rs
docs/: CNAME  index.html
enum_type/: Cargo.toml
enum_type/src/: main.rs
esp-rs/: Cargo.toml
esp-rs/src/: main.rs
esp32-c3/: Cargo.toml
esp32-c3/src/: main.rs
esp32-s3/: Cargo.toml
forList/: Cargo.toml
formatting/: Cargo.toml
fs/: la.txt
guessing/: Cargo.toml
hello-world/: Cargo.toml
learn_fn/: Cargo.toml
match/: Cargo.toml
nrf52840/: Cargo.toml
ownership/: Cargo.toml
package/: Cargo.toml
pdf/: Cargo.toml
primitives/: Cargo.toml
rand/: Cargo.toml
react18/: Cargo.toml  README.md  build.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rectangles/: Cargo.toml
register/: .gdbinit  Cargo.toml  README.md
restaurant/: Cargo.toml
rhymes/: Cargo.toml
slice/: Cargo.toml
slit-calculator/: Cargo.toml
src/: main.rs
structure/: Cargo.toml
tcsiot/: .gdbinit  Cargo.toml  memory.x
type/: Cargo.toml
value/: Cargo.toml
variable/: Cargo.toml
wasm/: Containerfile
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-react/: Cargo.toml  LICENSE_MIT
wasm32-wasi/: Cargo.toml
wasm32-wasi-hi/: Cargo.toml
worker-wasi/: Cargo.toml
(+40 files in other folders)
