[package]
name = "blinky"
version = "0.1.0"
authors = ["zhanghe <zhanghecool@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal.git" }
nb = "0.1.2"